@@ -14,14 +14,16 @@ Core and builtins
 
 - Patch #1733960: Allow T_LONGLONG to accept ints.
 
-- Prevent expandtabs() on string and unicode objects from causing a segfault when
-  a large width is passed on 32-bit platforms.
+- Prevent expandtabs() on string and unicode objects from causing a segfault
+  when a large width is passed on 32-bit platforms.
 
 - Bug #1733488: Fix compilation of bufferobject.c on AIX.
 
 
 Library
 -------
+
+- Bug #1734723: Fix repr.Repr() so it doesn't ignore the maxtuple attribute.
 
 - Bug #1728403: Fix a bug that CJKCodecs StreamReader hangs when it
   reads a file that ends with incomplete sequence and sizehint argument
